<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAF2"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintPai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:cardBackgroundColor="#3F51B5"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:text="@string/nossa_entrega"
                        android:textColor="@color/branco"
                        android:textSize="16sp"
                        android:layout_marginEnd="10dp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:srcCompat="@drawable/ic_baseline_local_shipping"
                        android:contentDescription="@string/ic_baseline_local_shipping" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textoTituloMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="10dp"
                android:text="@string/nintendo_switch"
                app:layout_constraintTop_toBottomOf="@id/cardView"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="#000000"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textoTituloMarca" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:cardBackgroundColor="#3F51B5"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:text="@string/compra_com_um_clique"
                        android:textColor="@color/branco"
                        android:textSize="16sp"
                        android:layout_marginEnd="10dp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="40dp"
                        app:srcCompat="@drawable/ic_baseline_pan_tool_"
                        android:contentDescription="@string/icone" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textoTituloMarca2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="14dp"
                app:layout_constraintTop_toBottomOf="@id/cardView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/playstation_4"
                android:textColor="#000000"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textoTituloMarca2" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:cardBackgroundColor="#3F51B5"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:text="@string/inscreva_se"
                        android:textColor="@color/branco"
                        android:textSize="16sp"
                        android:layout_marginEnd="10dp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:srcCompat="@drawable/ic_baseline_email_"
                        android:contentDescription="@string/icone" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textoTituloMarca3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/cardView3"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/playstation_5"
                android:textColor="#000000"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textoTituloMarca3" />

            <TextView
                android:id="@+id/textoTituloMarca4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/recyclerView3"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/xbox_one"
                android:textColor="#000000"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textoTituloMarca4" />

            <TextView
                android:id="@+id/textoTituloMarca5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/recyclerView4"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/xbox_x"
                android:textColor="#000000"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textoTituloMarca5" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>